fixed CSS tweetBox spillage and alignment

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,4 @@
 header {
-  height: 400px;
   width: 100vw;
   background-color: #f79400;
   background-image: url("https://www.transparenttextures.com/patterns/crossword.png");
