--- a/public/styles/tweet-post.css
+++ b/public/styles/tweet-post.css
@@ -25,7 +25,7 @@
 .userTop {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -41,10 +41,11 @@
 .usernameWithPhoto {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
-h2 {
-  margin: 0px;
+.usernameObject {
+  margin-left: 20px;
   font-weight: 600;
 }
 
